--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -141,13 +141,13 @@
   }
 }
 
-#root {
+#root > div {
   display: flex;
   overflow: hidden;
   height: 100vh;
+  gap: 12px;
 }
 body {
-  background-color: var(--main);
   font-family: "Open Sans", sans-serif;
   margin: 0;
   padding: 0;
@@ -159,15 +159,16 @@ main {
 }
 
 .custom-scroll {
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .custom-scroll::-webkit-scrollbar {
-  width: 2px;
+  width: 3px;
 }
 
 .custom-scroll::-webkit-scrollbar-thumb {
-  width: 2px;
+  width: 3px;
   background-color: var(--c-secondary);
   border-radius: 4px;
 }
